# histogram

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  cdf_advanced_example.cpp  demo.cpp  edge_cases_example.cpp  gaussian_filter_example.cpp  merge_example.cpp  peak_detection.cpp  peak_detection_advanced.cpp  peak_visualization.cpp  peaks_example.cpp  percentile_bin_example.cpp  percentile_example.cpp  sorted_peaks_example.cpp
include/histogram/: CDF.hpp  Histogram.hpp  SVGExporter.hpp
src/: CDF.cpp  CDF.hpp  GaussianFilter.cpp  GaussianFilter.hpp  Histogram.cpp  Histogram.hpp  SVGExporter.cpp  SVGExporter.hpp
test/: CMakeLists.txt  test_histogram.cpp  test_merge.cpp
